# template-cpp-fsm

./: CMakeLists.txt  readme.md
include/: ConcreteLightStates.h  Light.h  LightState.h
src/: ConcreteLightStates.cpp  Light.cpp  main.cpp
